--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/react-icons": "^3.0.0",
+    "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
