--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/react-icons": "^3.0.0",
+    "@types/swiper": "^6.0.0",
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "swiper": "^10.0.4",
     "typescript": "5.1.3"
   },
   "devDependencies": {
