--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "react-img-zoom": "^0.1.0",
+    "react-portal": "^4.2.2",
     "swiper": "^10.0.4",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-portal": "^4.0.4",
     "sass": "^1.63.4"
   }
 }
