--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
+    "next-auth": "^4.23.1",
+    "overlayscrollbars-react": "^0.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
@@ -26,7 +31,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/react-portal": "^4.0.4",
+    "prisma": "^5.1.1",
     "sass": "^1.63.4"
   }
 }
