Making user signin and login functionality

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://mustafaisaev3:mustafa@cluster0.5zpoxu1.mongodb.net/ecommerce"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
