--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.5",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
@@ -24,6 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-img-zoom": "^0.1.0",
     "react-portal": "^4.2.2",
