Making social auth

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://mustafaisaev3:mustafa@cluster0.5zpoxu1.mongodb.net/ecommerce"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID="1c4d1e7d4ea7f501f0ef"
+GITHUB_SECRET="29eb9c5e0a7efe97b68803360d084bf211f82492"
+
+GOOGLE_CLIENT_ID="896365438121-e3ir57hfsrmc77flma72herdmjftjs0j.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
