Get product data from server

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET="29eb9c5e0a7efe97b68803360d084bf211f82492"
 
 GOOGLE_CLIENT_ID="896365438121-e3ir57hfsrmc77flma72herdmjftjs0j.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dmsxzw5rd"
