--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.18.0",
     "overlayscrollbars-react": "^0.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
