--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.23.1",
     "next-cloudinary": "^4.18.0",
     "overlayscrollbars-react": "^0.5.1",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
@@ -31,12 +32,14 @@
     "react-icons": "^4.10.1",
     "react-img-zoom": "^0.1.0",
     "react-portal": "^4.2.2",
+    "react-slider": "^2.0.6",
     "swiper": "^10.0.4",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/react-portal": "^4.0.4",
+    "@types/react-slider": "^1.3.1",
     "prisma": "^5.1.1",
     "sass": "^1.63.4"
   }
