--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^5.1.1",
     "@types/node": "20.3.1",
@@ -34,7 +35,8 @@
     "react-portal": "^4.2.2",
     "react-slider": "^2.0.6",
     "swiper": "^10.0.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
